--- a/css/gift.css
+++ b/css/gift.css
@@ -1,16 +1,20 @@
+
 .navbar {
     position: fixed;
     z-index: 999;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #AC474B;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 30px;
     padding: 30px;
 }
+.navbar-color {
+    background-color: #AC474B;
+}
+
 
 .navbar a {
     font-size: 25px;
@@ -28,6 +32,9 @@
     gap: 40px;
     width: 100%;
     height: 100vh;
+}
+
+.container-color {
     background-color: #AC474B;
 }
 
