--- a/css/gift.css
+++ b/css/gift.css
@@ -11,10 +11,10 @@
     gap: 30px;
     padding: 30px;
 }
+
 .navbar-color {
     background-color: #AC474B;
 }
-
 
 .navbar a {
     font-size: 25px;
@@ -44,18 +44,28 @@
 }
 
 .circle {
-    /* background-color: #fff; */
     border: 12px solid #fff;
     width: 50px;
     height: 50px;
+    animation: circle .6s linear 1s forwards;
+    opacity: 0;
 }
 
 .circle:nth-child(1){
     border-radius: 50% 50% 0 50%;
+    transform: translateX(-50px) scale(0);
 }
 
 .circle:nth-child(2){
     border-radius: 50% 50% 50% 0;
+    transform: translateX(50px) scale(0);
+}
+
+@keyframes circle {
+    to {
+        transform: translate(0) scale(1);
+        opacity: 1;
+    }
 }
 
 .gift-box {
@@ -68,4 +78,34 @@
     width: 100px;
     height: 100px;
     background-color: #fff;
+    animation: gift .6s linear 1s forwards;
+    opacity: 0;
+}
+
+.gift:nth-child(1) {
+    transform: translateY(-50px) translateX(-50px) scale(0);
+    background-color: #682527;
+}
+
+.gift:nth-child(2) {
+    transform: translateY(-50px) translateX(50px) scale(0);
+    background-color: #682527;
+}
+
+.gift:nth-child(3) {
+    transform: translateY(50px) translateX(-50px) scale(0);
+    background-color: #682527;
+}
+
+.gift:nth-child(4) {
+    transform: translateY(50px) translateX(50px) scale(0);
+    background-color: #682527;
+}
+
+@keyframes gift {
+    to {
+        transform: translateY(0) translateX(0) scale(1) rotate(180deg);
+        background-color: #fff;
+        opacity: 1;
+    }
 }
